# minotaur

./: .bumpversion.cfg  .gitignore  Makefile  README.md  pre-commit.sh  pyproject.toml  setup.py
minotaur/: __init__.py  __main__.py  __version__.py  _base.py  _event.py  _inotify.c  _inotify.pyi  _mask.py  _minotaur.py
